[project]
name = "keypose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.2.0",
    "numpy>=1.17.4",
    "opencv-python>=4.3.0",
    "pyyaml>=5.3.0",
    "scikit-image>=0.17.0",
    "tensorflow>=2.2.0",
]
