[project]
name = "keypose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.2.0",
    "numpy<2",
    "opencv-python>=4.3.0",
    "protobuf<=3.20.3",
    "pyyaml>=5.3.0",
    "scikit-image>=0.17.0",
    "tensorflow<2.16",
]
